project(FilteringExamples)

add_executable(CompositeFilterExample CompositeFilterExample.cxx)
target_link_libraries(
  CompositeFilterExample
  PRIVATE
    ITKImageGradientModule
    ITKImageIntensityModule
    ITKThresholdingModule
    ITKImageIO
)
add_executable(FlipImageFilter FlipImageFilter.cxx)
target_link_libraries(
  FlipImageFilter
  PRIVATE
    ITKImageGridModule
    ITKImageIO
)
add_executable(FFTImageFilter FFTImageFilter.cxx)
target_link_libraries(
  FFTImageFilter
  PRIVATE
    ITKFFTModule
    ITKImageIntensityModule
    ITKImageIO
)
if(ITK_USE_FFTWF)
  add_executable(FFTDirectInverse2 FFTDirectInverse2.cxx)
  target_link_libraries(
    FFTDirectInverse2
    PRIVATE
      ITKFFTModule
      ITKImageIntensityModule
      ITKImageIO
  )
endif()
add_executable(GradientMagnitudeImageFilter GradientMagnitudeImageFilter.cxx)
target_link_libraries(
  GradientMagnitudeImageFilter
  PRIVATE
    ITKImageGradientModule
    ITKImageIntensityModule
    ITKImageIO
)
add_executable(
  GradientMagnitudeRecursiveGaussianImageFilter
  GradientMagnitudeRecursiveGaussianImageFilter.cxx
)
target_link_libraries(
  GradientMagnitudeRecursiveGaussianImageFilter
  PRIVATE
    ITKImageGradientModule
    ITKImageIntensityModule
    ITKImageIO
)
add_executable(
  GradientRecursiveGaussianImageFilter
  GradientRecursiveGaussianImageFilter.cxx
)
target_link_libraries(
  GradientRecursiveGaussianImageFilter
  PRIVATE
    ITKImageGradientModule
    ITKImageIO
)
add_executable(
  GrayscaleFunctionDilateImageFilter
  GrayscaleFunctionDilateImageFilter.cxx
)
target_link_libraries(
  GrayscaleFunctionDilateImageFilter
  PRIVATE
    ITKMathematicalMorphologyModule
    ITKImageIO
)
add_executable(BinaryThresholdImageFilter BinaryThresholdImageFilter.cxx)
target_link_libraries(
  BinaryThresholdImageFilter
  PRIVATE
    ITKThresholdingModule
    ITKImageIO
)
add_executable(BinaryMedianImageFilter BinaryMedianImageFilter.cxx)
target_link_libraries(
  BinaryMedianImageFilter
  PRIVATE
    ITKLabelVotingModule
    ITKImageIO
)
add_executable(OrientImageFilter OrientImageFilter.cxx)
target_link_libraries(
  OrientImageFilter
  PRIVATE
    ITKImageGridModule
    ITKImageIO
)
add_executable(OtsuThresholdImageFilter OtsuThresholdImageFilter.cxx)
target_link_libraries(
  OtsuThresholdImageFilter
  PRIVATE
    ITKThresholdingModule
    ITKImageIO
)
add_executable(
  OtsuMultipleThresholdImageFilter
  OtsuMultipleThresholdImageFilter.cxx
)
target_link_libraries(
  OtsuMultipleThresholdImageFilter
  PRIVATE
    ITKStatisticsModule
    ITKThresholdingModule
    ITKImageIO
)
add_executable(ThresholdImageFilter ThresholdImageFilter.cxx)
target_link_libraries(
  ThresholdImageFilter
  PRIVATE
    ITKThresholdingModule
    ITKImageIO
)
add_executable(CastingImageFilters CastingImageFilters.cxx)
target_link_libraries(
  CastingImageFilters
  PRIVATE
    ITKImageIntensityModule
    ITKImageIO
)
add_executable(CannyEdgeDetectionImageFilter CannyEdgeDetectionImageFilter.cxx)
target_link_libraries(
  CannyEdgeDetectionImageFilter
  PRIVATE
    ITKImageFeatureModule
    ITKImageIntensityModule
    ITKImageIO
)
add_executable(MedianImageFilter MedianImageFilter.cxx)
target_link_libraries(
  MedianImageFilter
  PRIVATE
    ITKSmoothingModule
    ITKImageIO
)
add_executable(MeanImageFilter MeanImageFilter.cxx)
target_link_libraries(
  MeanImageFilter
  PRIVATE
    ITKSmoothingModule
    ITKImageIO
)
add_executable(
  MathematicalMorphologyBinaryFilters
  MathematicalMorphologyBinaryFilters.cxx
)
target_link_libraries(
  MathematicalMorphologyBinaryFilters
  PRIVATE
    ITKBinaryMathematicalMorphologyModule
    ITKMathematicalMorphologyModule
    ITKThresholdingModule
    ITKImageIO
)
add_executable(
  MathematicalMorphologyGrayscaleFilters
  MathematicalMorphologyGrayscaleFilters.cxx
)
target_link_libraries(
  MathematicalMorphologyGrayscaleFilters
  PRIVATE
    ITKMathematicalMorphologyModule
    ITKImageIO
)
add_executable(
  BinaryMinMaxCurvatureFlowImageFilter
  BinaryMinMaxCurvatureFlowImageFilter.cxx
)
target_link_libraries(
  BinaryMinMaxCurvatureFlowImageFilter
  PRIVATE
    ITKCurvatureFlowModule
    ITKImageIntensityModule
    ITKImageIO
)
add_executable(DiscreteGaussianImageFilter DiscreteGaussianImageFilter.cxx)
target_link_libraries(
  DiscreteGaussianImageFilter
  PRIVATE
    ITKImageIntensityModule
    ITKSmoothingModule
    ITKImageIO
)
add_executable(GaussianBlurImageFunction GaussianBlurImageFunction.cxx)
target_link_libraries(
  GaussianBlurImageFunction
  PRIVATE
    ITKImageFunctionModule
    ITKImageIO
)
add_executable(
  LaplacianRecursiveGaussianImageFilter1
  LaplacianRecursiveGaussianImageFilter1.cxx
)
target_link_libraries(
  LaplacianRecursiveGaussianImageFilter1
  PRIVATE
    ITKImageIntensityModule
    ITKSmoothingModule
    ITKImageIO
)
add_executable(ScaleSpaceGenerator2D ScaleSpaceGenerator2D.cxx)
target_link_libraries(
  ScaleSpaceGenerator2D
  PRIVATE
    ITKImageFeatureModule
    ITKImageIO
)
add_executable(BinomialBlurImageFilter BinomialBlurImageFilter.cxx)
target_link_libraries(
  BinomialBlurImageFilter
  PRIVATE
    ITKImageIntensityModule
    ITKSmoothingModule
    ITKImageIO
)
add_executable(
  CurvatureAnisotropicDiffusionImageFilter
  CurvatureAnisotropicDiffusionImageFilter.cxx
)
target_link_libraries(
  CurvatureAnisotropicDiffusionImageFilter
  PRIVATE
    ITKAnisotropicSmoothingModule
    ITKImageIntensityModule
    ITKImageIO
)
add_executable(
  VectorGradientAnisotropicDiffusionImageFilter
  VectorGradientAnisotropicDiffusionImageFilter.cxx
)
target_link_libraries(
  VectorGradientAnisotropicDiffusionImageFilter
  PRIVATE
    ITKAnisotropicSmoothingModule
    ITKImageGradientModule
    ITKImageIntensityModule
    ITKImageIO
)
add_executable(
  VectorCurvatureAnisotropicDiffusionImageFilter
  VectorCurvatureAnisotropicDiffusionImageFilter.cxx
)
target_link_libraries(
  VectorCurvatureAnisotropicDiffusionImageFilter
  PRIVATE
    ITKAnisotropicSmoothingModule
    ITKImageGradientModule
    ITKImageIntensityModule
    ITKImageIO
)
add_executable(RGBToGrayscale RGBToGrayscale.cxx)
target_link_libraries(
  RGBToGrayscale
  PRIVATE
    ITKImageIntensityModule
    ITKImageIO
)
add_executable(BilateralImageFilter BilateralImageFilter.cxx)
target_link_libraries(
  BilateralImageFilter
  PRIVATE
    ITKImageFeatureModule
    ITKImageIntensityModule
    ITKImageIO
)
add_executable(ResampleImageFilter2 ResampleImageFilter2.cxx)
target_link_libraries(
  ResampleImageFilter2
  PRIVATE
    ITKImageFunctionModule
    ITKImageGridModule
    ITKTransformModule
    ITKImageIO
)
add_executable(
  GradientAnisotropicDiffusionImageFilter
  GradientAnisotropicDiffusionImageFilter.cxx
)
target_link_libraries(
  GradientAnisotropicDiffusionImageFilter
  PRIVATE
    ITKAnisotropicSmoothingModule
    ITKImageIntensityModule
    ITKImageIO
)
add_executable(CurvatureFlowImageFilter CurvatureFlowImageFilter.cxx)
target_link_libraries(
  CurvatureFlowImageFilter
  PRIVATE
    ITKCurvatureFlowModule
    ITKImageIntensityModule
    ITKImageIO
)
add_executable(GradientVectorFlowImageFilter GradientVectorFlowImageFilter.cxx)
target_link_libraries(
  GradientVectorFlowImageFilter
  PRIVATE
    ITKImageFeatureModule
    ITKImageIntensityModule
    ITKImageIO
)
add_executable(SigmoidImageFilter SigmoidImageFilter.cxx)
target_link_libraries(
  SigmoidImageFilter
  PRIVATE
    ITKImageIntensityModule
    ITKImageIO
)
add_executable(
  RGBCurvatureAnisotropicDiffusionImageFilter
  RGBCurvatureAnisotropicDiffusionImageFilter.cxx
)
target_link_libraries(
  RGBCurvatureAnisotropicDiffusionImageFilter
  PRIVATE
    ITKAnisotropicSmoothingModule
    ITKImageIO
)
add_executable(
  RGBGradientAnisotropicDiffusionImageFilter
  RGBGradientAnisotropicDiffusionImageFilter.cxx
)
target_link_libraries(
  RGBGradientAnisotropicDiffusionImageFilter
  PRIVATE
    ITKAnisotropicSmoothingModule
    ITKImageIO
)
add_executable(
  SignedDanielssonDistanceMapImageFilter
  SignedDanielssonDistanceMapImageFilter.cxx
)
target_link_libraries(
  SignedDanielssonDistanceMapImageFilter
  PRIVATE
    ITKDistanceMapModule
    ITKImageIntensityModule
    ITKImageIO
)
add_executable(
  SecondDerivativeRecursiveGaussianImageFilter
  SecondDerivativeRecursiveGaussianImageFilter.cxx
)
target_link_libraries(
  SecondDerivativeRecursiveGaussianImageFilter
  PRIVATE
    ITKSmoothingModule
    ITKImageIO
)
add_executable(DerivativeImageFilter DerivativeImageFilter.cxx)
target_link_libraries(
  DerivativeImageFilter
  PRIVATE
    ITKImageFeatureModule
    ITKImageIntensityModule
    ITKImageIO
)
add_executable(
  DanielssonDistanceMapImageFilter
  DanielssonDistanceMapImageFilter.cxx
)
target_link_libraries(
  DanielssonDistanceMapImageFilter
  PRIVATE
    ITKConnectedComponentsModule
    ITKDistanceMapModule
    ITKImageIntensityModule
    ITKImageIO
)
add_executable(AntiAliasBinaryImageFilter AntiAliasBinaryImageFilter.cxx)
target_link_libraries(
  AntiAliasBinaryImageFilter
  PRIVATE
    ITKAntiAliasModule
    ITKImageIntensityModule
    ITKImageIO
)
add_executable(ResampleImageFilter ResampleImageFilter.cxx)
target_link_libraries(
  ResampleImageFilter
  PRIVATE
    ITKImageFunctionModule
    ITKImageGridModule
    ITKTransformModule
    ITKImageIO
)
add_executable(
  SmoothingRecursiveGaussianImageFilter
  SmoothingRecursiveGaussianImageFilter.cxx
)
target_link_libraries(
  SmoothingRecursiveGaussianImageFilter
  PRIVATE
    ITKImageIntensityModule
    ITKSmoothingModule
    ITKImageIO
)
add_executable(
  SmoothingRecursiveGaussianImageFilter2
  SmoothingRecursiveGaussianImageFilter2.cxx
)
target_link_libraries(
  SmoothingRecursiveGaussianImageFilter2
  PRIVATE
    ITKImageIntensityModule
    ITKSmoothingModule
    ITKImageIO
)
add_executable(
  LaplacianRecursiveGaussianImageFilter2
  LaplacianRecursiveGaussianImageFilter2.cxx
)
target_link_libraries(
  LaplacianRecursiveGaussianImageFilter2
  PRIVATE
    ITKImageFeatureModule
    ITKImageIntensityModule
    ITKImageIO
)
add_executable(MorphologicalImageEnhancement MorphologicalImageEnhancement.cxx)
target_link_libraries(
  MorphologicalImageEnhancement
  PRIVATE
    ITKIOPNGModule
    ITKImageIntensityModule
    ITKMathematicalMorphologyModule
    ITKImageIO
)
add_executable(
  MinMaxCurvatureFlowImageFilter
  MinMaxCurvatureFlowImageFilter.cxx
)
target_link_libraries(
  MinMaxCurvatureFlowImageFilter
  PRIVATE
    ITKCurvatureFlowModule
    ITKImageIntensityModule
    ITKImageIO
)
add_executable(
  FFTImageFilterFourierDomainFiltering
  FFTImageFilterFourierDomainFiltering.cxx
)
target_link_libraries(
  FFTImageFilterFourierDomainFiltering
  PRIVATE
    ITKFFTModule
    ITKImageIntensityModule
    ITKImageIO
)
add_executable(LaplacianImageFilter LaplacianImageFilter.cxx)
target_link_libraries(
  LaplacianImageFilter
  PRIVATE
    ITKImageFeatureModule
    ITKImageIntensityModule
    ITKImageIO
)
add_executable(ResampleImageFilter3 ResampleImageFilter3.cxx)
target_link_libraries(
  ResampleImageFilter3
  PRIVATE
    ITKImageFunctionModule
    ITKImageGridModule
    ITKTransformModule
    ITKImageIO
)
add_executable(ResampleImageFilter4 ResampleImageFilter4.cxx)
target_link_libraries(
  ResampleImageFilter4
  PRIVATE
    ITKImageGridModule
    ITKTransformModule
    ITKImageIO
)
add_executable(
  VotingBinaryHoleFillingImageFilter
  VotingBinaryHoleFillingImageFilter.cxx
)
target_link_libraries(
  VotingBinaryHoleFillingImageFilter
  PRIVATE
    ITKLabelVotingModule
    ITKImageIO
)
add_executable(
  VotingBinaryIterativeHoleFillingImageFilter
  VotingBinaryIterativeHoleFillingImageFilter.cxx
)
target_link_libraries(
  VotingBinaryIterativeHoleFillingImageFilter
  PRIVATE
    ITKLabelVotingModule
    ITKImageIO
)
add_executable(ResampleImageFilter5 ResampleImageFilter5.cxx)
target_link_libraries(
  ResampleImageFilter5
  PRIVATE
    ITKImageGridModule
    ITKTransformModule
    ITKImageIO
)
add_executable(ResampleImageFilter6 ResampleImageFilter6.cxx)
target_link_libraries(
  ResampleImageFilter6
  PRIVATE
    ITKImageGridModule
    ITKTransformModule
    ITKImageIO
)
add_executable(ResampleImageFilter8 ResampleImageFilter8.cxx)
target_link_libraries(
  ResampleImageFilter8
  PRIVATE
    ITKImageFunctionModule
    ITKImageGridModule
    ITKTransformModule
    ITKImageIO
)
add_executable(ResampleImageFilter9 ResampleImageFilter9.cxx)
target_link_libraries(
  ResampleImageFilter9
  PRIVATE
    ITKImageFunctionModule
    ITKImageGridModule
    ITKTransformModule
    ITKImageIO
)
add_executable(ResampleVolumesToBeIsotropic ResampleVolumesToBeIsotropic.cxx)
target_link_libraries(
  ResampleVolumesToBeIsotropic
  PRIVATE
    ITKImageGridModule
    ITKImageIntensityModule
    ITKSmoothingModule
    ITKTransformModule
    ITKImageIO
)
add_executable(SubsampleVolume SubsampleVolume.cxx)
target_link_libraries(
  SubsampleVolume
  PRIVATE
    ITKImageGridModule
    ITKSmoothingModule
    ITKTransformModule
    ITKImageIO
)
add_executable(SpatialObjectToImage1 SpatialObjectToImage1.cxx)
target_link_libraries(
  SpatialObjectToImage1
  PRIVATE
    ITKSpatialObjectsModule
    ITKImageIO
)
add_executable(SpatialObjectToImage2 SpatialObjectToImage2.cxx)
target_link_libraries(
  SpatialObjectToImage2
  PRIVATE
    ITKSpatialObjectsModule
    ITKImageIO
)
add_executable(SpatialObjectToImage3 SpatialObjectToImage3.cxx)
target_link_libraries(
  SpatialObjectToImage3
  PRIVATE
    ITKSpatialObjectsModule
    ITKImageIO
)
add_executable(
  LaplacianSharpeningImageFilter
  LaplacianSharpeningImageFilter.cxx
)
target_link_libraries(
  LaplacianSharpeningImageFilter
  PRIVATE
    ITKImageFeatureModule
    ITKImageIntensityModule
    ITKImageIO
)
add_executable(VectorIndexSelection VectorIndexSelection.cxx)
target_link_libraries(
  VectorIndexSelection
  PRIVATE
    ITKImageIntensityModule
    ITKImageIO
)
add_executable(VesselnessMeasureImageFilter VesselnessMeasureImageFilter.cxx)
target_link_libraries(
  VesselnessMeasureImageFilter
  PRIVATE
    ITKImageFeatureModule
    ITKImageIO
)
add_executable(
  DiffusionTensor3DReconstructionImageFilter
  DiffusionTensor3DReconstructionImageFilter.cxx
)
target_link_libraries(
  DiffusionTensor3DReconstructionImageFilter
  PRIVATE
    ITKDiffusionTensorImageModule
    ITKIONRRDModule
    ITKImageIO
)
add_executable(FFTDirectInverse FFTDirectInverse.cxx)
target_link_libraries(
  FFTDirectInverse
  PRIVATE
    ITKFFTModule
    ITKImageGridModule
    ITKImageIO
)
add_executable(
  ZeroCrossingBasedEdgeDetectionImageFilter
  ZeroCrossingBasedEdgeDetectionImageFilter.cxx
)
target_link_libraries(
  ZeroCrossingBasedEdgeDetectionImageFilter
  PRIVATE
    ITKImageFeatureModule
    ITKImageIntensityModule
    ITKImageIO
)
add_executable(WarpImageFilter1 WarpImageFilter1.cxx)
target_link_libraries(
  WarpImageFilter1
  PRIVATE
    ITKImageGridModule
    ITKImageIO
)
add_executable(SurfaceExtraction SurfaceExtraction.cxx)
target_link_libraries(
  SurfaceExtraction
  PRIVATE
    ITKMeshModule
    ITKImageIO
)
add_executable(
  DigitallyReconstructedRadiograph1
  DigitallyReconstructedRadiograph1.cxx
)
target_link_libraries(
  DigitallyReconstructedRadiograph1
  PRIVATE
    ITKImageFunctionModule
    ITKImageGridModule
    ITKImageIntensityModule
    ITKTransformModule
    ITKImageIO
)
add_executable(ResampleImageFilter7 ResampleImageFilter7.cxx)
target_link_libraries(
  ResampleImageFilter7
  PRIVATE
    ITKImageFunctionModule
    ITKImageGridModule
    ITKTransformModule
    ITKImageIO
)

if(BUILD_TESTING)
  add_subdirectory(test)
endif()
